# gosipel

./: README.md
client/: .gitignore  README.md  package-lock.json  package.json  vitest.config.mts
client/src/components/: ChatInterface.tsx  MarkdownRenderer.tsx
client/src/hooks/: useChat.test.ts  useChat.ts
client/src/lib/: config.ts  messageQueue.test.ts  messageQueue.ts
python-server/: .gitignore  Dockerfile  Makefile  Readme.md  Roadmap.md  docker-compose.yml  pyproject.toml
python-server/app/: chat.py  service.py
python-server/configs/: build.yaml  docker-config.yaml  local-config.yaml  rag-config.json
python-server/docker/: Dockerfile.llama-stack  ollama-entrypoint.sh
python-server/scripts/: clean_agents.py  clean_up.py  clean_vector_db.py  index_documents.py
